influxdb/02-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  serviceName: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000          
      containers:
      - image: influxdb:2.7.11-alpine
        name: influxdb
        lifecycle:
          postStart:
            exec:
              command: ["/bin/bash", "/scripts/init.sh > /tmp/init.log 2>&1"]
        ports:
        - containerPort: 8086
          name: influxdb
        volumeMounts:
        - name: data
          mountPath: /var/lib/influxdb2
        - name: backup
          mountPath: /mnt/backup
          readOnly: true
        - name: init
          mountPath: /scripts
          readOnly: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: influxdb-data
      - name: backup
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/kubernetes/backup/influxdb
      - name: init
        secret:
          secretName: influxdb-init
          defaultMode: 0700
