influxdb/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  namespace: monitoring
spec:
  ports:
  - name: influxdb
    port: 8086
    targetPort: 8086
  selector:
    app: influxdb
  type: ClusterIP
